--- a/.github/workflows/unittest.yaml
+++ b/.github/workflows/unittest.yaml
@@ -11,7 +11,7 @@ jobs:
     strategy:
       matrix:
         # Must use go > 1.13 to support error wrapping
-        go-version: [1.13.x]
+        go-version: [1.13.x, 1.14.x]
     runs-on: ubuntu-latest
     steps:
       - name: Setup Go
