--- a/.codecov.yaml
+++ b/.codecov.yaml
@@ -2,4 +2,7 @@ coverage:
   status:
     patch:
       default:
-        target: 80%
+        target: 50%
+    project:
+      default:
+        threshold: 1%
