--- a/.github/workflows/unittest.yaml
+++ b/.github/workflows/unittest.yaml
@@ -10,22 +10,21 @@ jobs:
     name: unittest
     strategy:
       matrix:
-        # Must use go > 1.13 to support error wrapping
-        go-version: [1.13.x, 1.14.x]
+        go-version: [1.18, 1.19]
     runs-on: ubuntu-latest
     steps:
       - name: Setup Go
-        uses: actions/setup-go@v1
+        uses: actions/setup-go@v3
         with:
-            go-version: ${{ matrix.go-version }} 
+            go-version: ${{ matrix.go-version }}
 
       - name: Checkout code
-        uses: actions/checkout@v1
+        uses: actions/checkout@v3
 
       - name: Test code
         run: go test -race -coverprofile=coverage.txt -covermode=atomic ./...
 
       - name: Upload code coverage
-        uses: codecov/codecov-action@v1
+        uses: codecov/codecov-action@v3
         with:
           file: ./coverage.txt
